fix overflow

--- a/assets/core.styl
+++ b/assets/core.styl
@@ -68,7 +68,7 @@ resets(arr)
   box-sizing: border-box
   cursor: text
   line-height: 1.42
-  min-height: 100%
+  height: 100%
   outline: none
   overflow-y: auto
   padding: 12px 15px
